--- a/general_audience_information.Rmd
+++ b/general_audience_information.Rmd
@@ -60,8 +60,8 @@ knitr::include_graphics(here::here("Figs", "pm2.5_scale_graphic-color_2.jpg"))
 
 **Relative Risk (RR):** The relative risk (RR) is a type of effect estimate, which is a measure of the realtionship between an exposure and an outcome. Relative risk is a ratio defined as the risk for an individual who is exposed to a hazard to experience a negative health outcome relative to a person who is not exposed to that hazard (Figure 2).  For **Smoke Forecaster**, we use a relative risk for emergency department visits due to wildfire smoke exposure. For this tool, we consulted epidemiological studies that compared the liklihood that a person who was exposed to wildfire smoke would seek care in an emergency department to the likelihood of an ED visit for an person who was not exposed to wildfire smoke. The ratio of these risks is called the **relative risk** of an ED visit due to wildfire smoke exposure. A relative risk above 1 means that exposed populations are _more likely_ to need to visit the ED when exposed to wildfire smoke. The larger the relative risk, the stronger the link is between the hazard (in our case: wildfire smoke) and the outcome (ED visits). The Centers for Disease Control and Prevention has more information on how relative risks are calculated [here](https://www.cdc.gov/csels/dsepd/ss1978/lesson3/section5.html).
 
-```{r echo=FALSE, fig.cap="**Figure 2: Relative Risk**", fig.align='center', out.width='70%'}
-knitr::include_graphics(here::here("Figs", "relative_risk.png"))
+```{r echo=FALSE, fig.cap="**Figure 2: Relative Risk** _Image Credit: Coriell Institute_", fig.align='center', out.width='70%'}
+knitr::include_graphics(here::here("Figs", "understanding-risk-graph.jpg"))
 ```
 
 **Respiratory Relative Risk:** This is the relative risk for going to the ED for any respiratory health condition (for example, asthma, chronic obstructive pulmonary disease [COPD], or pneumonia) for people who are exposed to wildfire smoke compared to people who are not exposed to wildfire smoke. **Smoke Forecaster** provides estimates of the relative risk of going to the ED for a respiratory health condition for the modeled wildfire smoke concentration at a specific location compared to a hypothetical scenario where there is no wildfire smoke at that location. Numbers greater than 1 indicate there is an increased risk of an ED visit for respiratory diseases for people living at that location. The designation of a respiratory health condition is based on the diagnosis listed in a patient's medical record. These diagnosis codes are usually based on the International Classification of Disease (ICD) system. Examples of which diagnoses are included in the respriatory relative risk are outlined in Table 1 (see the section titled "What information do we need for the **Smoke Forecaster** HIA"). 
@@ -151,7 +151,7 @@ knitr::include_graphics(here::here("Figs", "hif.png"))
 
 The HIF is a log-linear function, which the relationship between smoke and ED visits for respiratory health outcomes is strongest when concentrations are lower and starts to level off with increasing concentrations of wildfire smoke. Importantly, the relationship is always positive, meaning there may be negative health effects at any level of wildfire smoke exposure.
 
-**Smoke Forecaster** displays the number of additional ED visits predicted for each county on the map using the _HIA_ layer. Figure 6 shows an example of what the _HIA_ layer looks like for Utah on August 1, 2019. In this figure, there is a wildfire burning southern Washington state (shown as a red dot and red and grey pixels). This wildfire is associated with increased wildfire smoke exposures and 6 additional ED visit per day in Yakima county, Washington.
+**Smoke Forecaster** displays the number of additional ED visits predicted for each county on the map using the _HIA_ layer. Figure 6 shows an example of what the _HIA_ layer looks like for Utah on August 21, 2019. In this figure, there are wildfires burning across central Washington state, Oregon, California, and Nevada (shown as red dots and red and grey pixels). This wildfire is associated with increased wildfire smoke exposures and 10 additional ED visit per day in Yakima county, Washington.
 
 ```{r echo=FALSE, fig.cap="**Figure 6: Smoke-Related ED Visits in Yakima County (Aug 1, 2019)**", fig.align='center', out.width='70%'}
 knitr::include_graphics(here::here("figs", "washington_hia_example.jpg"))
