--- a/general_audience_information.Rmd
+++ b/general_audience_information.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "More Information on **Smoke Forecaster**"
-# author: "Sheena Martenies"
-# date: "7/30/2019"
-output: 
+output:
   html_document:
-    toc: true
-    number_sections: true
+    number_sections: yes
+    toc: yes
+  pdf_document:
+    toc: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -18,8 +18,6 @@ library(raster)
 # Introduction
 
 **Smoke Forecaster** is an online wildfire smoke health impact assessment tool designed to provide environmental and public health officials at the state and local level with information about the potenital health risks of wildfire smoke exposure in their communities.
-
-MORE HERE
 
 # Acronyms
 
@@ -68,10 +66,6 @@ knitr::include_graphics(here::here("Figs", "understanding-risk-graph.jpg"))
 
 
 **Asthma Relative Risk:** This is the relative risk for going to the ED for an asthma exacerbation or asthma symptoms (e.g., wheeze, cough, or shortness of breath) for people who are exposed to wildfire smoke compared to people who are not exposed. **Smoke Forecaster** provides estimates of the relative risk of going to the ED for asthma for the modeled wildfire smoke concentration at a specific location compared to a hypothetical scenario where there is no wildfire smoke at that location. Numbers greater than 1 indicate there is an increased risk of an ED visit for asthma for people living at that location.The asthma relative risk is more specific than the respiratory relative risk, which includes all respiratory health diagnoses. The asthma relative risk only includes ED visits that fall under the asthma category (ICD code 493).
-
-
-
-_more here as needed_
 
 # Health Impact Assessment
 
@@ -157,12 +151,9 @@ The HIF is a log-linear function, which the relationship between smoke and ED vi
 knitr::include_graphics(here::here("figs", "washington_hia_example.jpg"))
 ```
 
-**note:: might want a different example figure**
 
 ## What can we do with HIA estimates?
 
 The HIF produces an _**estimate**_ of the number of additional ED visits there might be over the typical number of ED visits in a county. This prediction is based on the number of ED visits that typically occur on a single day in a county, the number of people who live in that county, and the estiamted (predicted) concentration of wildfire smoke in the county. 
 
 The wildfire smoke exposures data and predicted number of ED visits estimated by the **Smoke Forecaster** tool are intended to provide environmental and public health officials information on where the most vulnerable communities in their jurisdictions might be during a wildfire event. This information can help officials plan their communication efforts and make decisions about where to allocate resources.
-
-MORE HERE-- Might need a discussion with Sheryl and Marilee about what else to add/how to make additions/what needs to come out.
